FIX : Image Overflowing Mobile Viewport

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -97,7 +97,8 @@ header {
 
 .movie-img {
   margin: 5px 10px;
-  width: 150px;
+  max-width: 150px;
+  min-width: 50px;
   > img {
     width: 100%;
     height: auto;
